Fix the alignment not rendering correctly
(because the "style=..." code was automatically being sanitized)

--- a/app/styles/waltz.styl
+++ b/app/styles/waltz.styl
@@ -142,6 +142,18 @@ footer
 .indent
     margin-left 16px
 
+.align-left
+    text-align  left
+
+.align-center
+    text-align  center
+
+.align-right
+    text-align  right
+
+.align-justify
+    text-align  justify
+
 .posts-list
     list-style  none
     margin      0
